--- a/pave-3d.html
+++ b/pave-3d.html
@@ -19,9 +19,10 @@ body {
 	padding-top: 4em;
 }
 tube-3d {
-	height: 8em;
-	--radius: 17em;
+	height: 14em;
+	--radius: 20em;
 	animation: spin-x 10s infinite linear;
+	--fond: red;
 }
 reste{
 	--radius: 3cm;
@@ -31,5 +32,5 @@ reste{
 	background-color: #F084;
 }
 </style></head><body>
-	<tube-3d class='mesure'></tube-3d>
+	<tube-3d class=''></tube-3d>
 </body></html>
