--- a/daily intermission.html
+++ b/daily intermission.html
@@ -42,15 +42,6 @@ table, tr {
 	border-collapse: collapse;
 	border-style: solid;
 }
-tr:focus-within {
-	border-width: 4px;
-	font-size: 1.5rem;
-}
-td:focus {
-	border-top-width: 4px;
-	border-bottom-width: 4px;
-	font-size: 1.5rem;
-}
 th, td {
 	padding: 0.2em;
 	border-style: solid;
@@ -61,62 +52,33 @@ p { display: none; }
 <h1 id='daily-salles'>Les salles de réunion du groupe "daily inter-mission <abbr>tpshr</abbr>"</h1>
 <p>9 personnes en intercontrat et un dcs.</p>
 <table aria-labelledby='daily-salles'><tr>
-	<th scope='col'></th>
-	<th scope='col' id='c1'>Date</th>
-	<th scope='col' id='c2' title='bâtiment'>bât.</th>
-	<th scope='col' id='c3'>étage</th>
-	<th scope='col' id='c4' title='numéro de salle'>n° salle</th>
-	<th scope='col' id='c5' title='nom de salle'>salle</th>
-	<th scope='col' id='c6' title='heure de début'>début</th>
-	<th scope='col' id='c7' title='heure de fin'>fin</th>
+	<th></th>
+	<th title='bâtiment'>bât.</th><th>étage</th>
+	<th title='numéro de salle'>n° salle</th><th title='nom de salle'>salle</th>
+	<th title='heure de début'>début</th><th title='heure de fin'>fin</th>
 </tr><tr>
-	<th scope='row' id='r1'>Lundi</th>
-	<td tabindex='0' headers='r1 c1'>20/10/2025</td>
-	<td tabindex='0' headers='r1 c2'>D</td>
-	<td tabindex='0' headers='r1 c3'>D2</td>
-	<td tabindex='0' headers='r1 c4'>16</td>
-	<td tabindex='0' headers='r1 c5'>paris</td>
-	<td tabindex='0' headers='r1 c6'>09:30</td>
-	<td tabindex='0' headers='r1 c7'>13:45</td>
+	<th>Lundi</th><td></td><td></td><td></td><td></td><td></td><td></td>
 </tr><tr>
-	<th scope='row' id='r2'>Mardi</th>
-	<td tabindex='0' headers='r2 c1'>21/10/2025</td>
-	<td tabindex='0' headers='r2 c2'>B</td>
-	<td tabindex='0' headers='r2 c3'>D4</td>
-	<td tabindex='0' headers='r2 c4'>12</td>
-	<td tabindex='0' headers='r2 c5'></td>
-	<td tabindex='0' headers='r2 c6'>09:15</td>
-	<td tabindex='0' headers='r2 c7'>17:30</td>
+	<th>Mardi</th><td></td><td></td><td></td><td></td><td></td><td></td>
 </tr><tr>
-	<th scope='row' id='r3'>Mercredi</th>
-	<td tabindex='0' headers='r3 c1'>22/10/2025</td>
-	<td tabindex='0' headers='r3 c2'>D</td>
-	<td tabindex='0' headers='r3 c3'>D3</td>
-	<td tabindex='0' headers='r3 c4'>12</td>
-	<td tabindex='0' headers='r3 c5'>égée</td>
-	<td tabindex='0' headers='r3 c6'>09:30</td>
-	<td tabindex='0' headers='r3 c7'>17:30</td>
+	<th>Mercredi</th><td></td><td></td><td></td><td></td><td></td><td></td>
 </tr><tr>
-	<th scope='row' id='r4'>Jeudi</th>
-	<td tabindex='0' headers='r4 c1'>23/10/2025</td>
-	<td tabindex='0' headers='r4 c2'>C</td>
-	<td tabindex='0' headers='r4 c3'>D3</td>
-	<td tabindex='0' headers='r4 c4'>16</td>
-	<td tabindex='0' headers='r4 c5'>kilauea</td>
-	<td tabindex='0' headers='r4 c6'>09:30</td>
-	<td tabindex='0' headers='r4 c7'>17:30</td>
+	<th>Jeudi</th><td></td><td></td><td></td><td></td><td></td><td></td>
 </tr><tr>
-	<th scope='row' id='r5'>Vendredi</th>
-	<td tabindex='0' headers='r5 c1'>24/10/2025</td>
-	<td tabindex='0' headers='r5 c2'>D</td>
-	<td tabindex='0' headers='r5 c3'>D3</td>
-	<td tabindex='0' headers='r5 c4'>12</td>
-	<td tabindex='0' headers='r5 c5'>égée</td>
-	<td tabindex='0' headers='r5 c6'>09:30</td>
-	<td tabindex='0' headers='r5 c7'>17:30</td>
+	<th>Vendredi</th><td></td><td></td><td></td><td></td><td></td><td></td>
 </tr></table>
 <script type='text/javascript'>
-	const head = document.getElementsByTagName ('th')[0];
-	console.log (head.constructor.name);
-</script>
-</body></html>
+	const salles =[
+		[ 'd', 'd2', '16', 'paris', '09:30', '13:45' ],
+		[ 'b', 'd4', '12', '', '09:15', '17:30' ],
+		[ 'd', 'd3', '12', 'égée', '09:30', '17:30' ],
+		[ 'c', 'd3', '16', 'kilauea', '09:30', '17:30' ],
+		[ 'd', 'd3', '12', 'égée', '09:30', '17:30' ]
+	];
+	const rows = document.getElementsByTagName ('tr');
+	for (var s=0; s< salles.length; s++){
+		salles[s][0] = salles[s][0].toUpperCase();
+		salles[s][1] = salles[s][1].toUpperCase();
+		for (var c=0; c< salles[0].length; c++) rows[s+1].children[c+1].innerHTML = salles[s][c];
+	}
+</script></body></html>
