--- a/pave-3d.html
+++ b/pave-3d.html
@@ -18,19 +18,20 @@ body {
 	padding-left: 4em;
 	padding-top: 4em;
 }
-tube-3d {
-	height: 14em;
-	--radius: 20em;
+boul-3d {
+	--radius: 12em;
 	animation: spin-x 10s infinite linear;
-	--fond: red;
+	--fond: #08F4;
 }
 reste{
 	--radius: 3cm;
+	--fond: F084;
+	--bord: solid 4px maroon;
 	background: #0884;
 	transform: rotateX(90deg);
 	animation: spin-x 10s infinite linear;
 	background-color: #F084;
 }
 </style></head><body>
-	<tube-3d class=''></tube-3d>
+	<boul-3d class=''></boul-3d>
 </body></html>
