--- a/daily intermission.html
+++ b/daily intermission.html
@@ -69,9 +69,9 @@ p { display: none; }
 </tr></table>
 <script type='text/javascript'>
 	const salles =[
-		[ 'd', 'd2', '16', 'paris', '09:30', '13:45' ],
-		[ 'b', 'd4', '12', '', '09:15', '17:30' ],
-		[ 'd', 'd3', '12', 'égée', '09:30', '17:30' ],
+		[ 'd', 'd3', '12', '', '09:30', '10:00' ],
+		[ 'c', 'd4', '10', 'hélenium', '09:30', '17:30' ],
+		[ 'c', 'd4', '10', 'hélenium', '09:30', '17:30' ],
 		[ 'c', 'd3', '16', 'kilauea', '09:30', '17:30' ],
 		[ 'd', 'd3', '12', 'égée', '09:30', '17:30' ]
 	];
