--- a/pave-3d.html
+++ b/pave-3d.html
@@ -33,12 +33,12 @@ body {
 	90% { --radius: 5.5em; }
 	100% { --radius: 6em; }
 }
-chfr-3d, matl-3d {
-	--radius: 2em;
-	--depth: 11em;
+matl-3d {
+	--radius: 3em;
+	--depth: 12em;
 	--fond: #08F4;
-	width: 13em;
-	height: 12em;
+	width: 23em;
+	height: 7em;
 	animation: spin-x 10s infinite linear;
 }
 reste{
@@ -51,6 +51,5 @@ reste{
 	animation: spin-x 10s infinite linear;
 }
 </style></head><body>
-	<chfr-3d class=''><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></chfr-3d>
-	<matl-3d class=''><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
+	<matl-3d class='mesure'><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
 </body></html>
