--- a/pave-3d.html
+++ b/pave-3d.html
@@ -38,8 +38,8 @@ matl-3d {
 	--depth: 12em;
 	--fond: #08F4;
 	width: 23em;
-	height: 7em;
-	animation: spin-x 10s infinite linear;
+	height: 17em;
+	animation: spin-y 10s infinite linear;
 }
 reste{
 	--radius: 3cm;
