--- a/pave-3d.html
+++ b/pave-3d.html
@@ -33,13 +33,17 @@ body {
 	90% { --radius: 5.5em; }
 	100% { --radius: 6em; }
 }
+@keyframes spin-test {
+	from { transform: rotateY(90deg) rotateX(0); }
+	to { transform: rotateY(90deg) rotateX(-360deg); }
+}
 matl-3d {
-	--radius: 3em;
+	--radius: 4em;
 	--depth: 12em;
 	--fond: #08F4;
 	width: 23em;
 	height: 17em;
-	animation: spin-y 10s infinite linear;
+	animation: spin-x 10s infinite linear;
 }
 reste{
 	--radius: 3cm;
@@ -48,7 +52,9 @@ reste{
 	border: solid 4px maroon;
 	background: #0884;
 	transform: rotateX(90deg);
+	transform: rotateY(75deg) rotateZ(20deg);
 	animation: spin-x 10s infinite linear;
+	animation: spin-test 10s infinite linear;
 }
 </style></head><body>
 	<matl-3d class='mesure'><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
