--- a/pave-3d.html
+++ b/pave-3d.html
@@ -57,5 +57,9 @@ reste{
 	animation: spin-test 10s infinite linear;
 }
 </style></head><body>
+	<section class='accordeon'>
+		<h3><button aria-controls='depliable' aria-expanded='false'>tître de l'accordéon</button></h3>
+		<div id='depliable'><p>je suis le contenu</p></div>
+	</section>
 	<matl-3d class='mesure'><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
 </body></html>
