--- a/piece.html
+++ b/piece.html
@@ -32,7 +32,7 @@ piece-3d { animation: spin-y 10s infinite linear; }
 <!--
 <button onclick='turnLeft()'>gauche</button><button onclick='turnStraigth()'>centré</button><button onclick='turnRigth()'>droite</button>
 -->
-	<piece-3d>
+	<piece-3d class='mesure'>
 		<p>bottom</p><p>top</p><p class='fenetre'>back</p><p class='porte'>left</p><p class='fenetre'>right</p><p>front</p>
 		<porte class='left'>coco</porte><fenetre class='back'>lolo</fenetre><fenetre class='right'>lolo</fenetre>
 	</piece-3d>
