--- a/piece.html
+++ b/piece.html
@@ -20,19 +20,24 @@ body {
 	perspective-origin: 50% 100px;
 	padding-left: 8em;
 }
-body > piedrd-3d, body > piedcr-3d, table-3d {
-	width: 20em;
-	animation: spin-x 10s infinite linear;
+table-3d {
+	width: 10em;
+	--depth: 8em;
+	--bord: solid 4px maroon;
+	--fond: brown;
+}
+piece-3d table-3d {
+	top: 15em;	/* fixé en fonction des hauteurs définies par l'utilisateur. ne peut être définie automatiquement */
+	left: 50%;
+}
+piece-3d {
+	animation: spin-y 10s infinite linear;
 }
 </style></head><body>
-	<piedcr-3d></piedcr-3d>
-	<piedrd-3d></piedrd-3d>
-	<table-3d></table-3d>
-<!--
 <button onclick='turnLeft()'>gauche</button><button onclick='turnStraigth()'>centré</button><button onclick='turnRigth()'>droite</button>
 	<piece-3d class='semi-losange plancher'>
 		<p>bottom</p><p>top</p><p class='fenetre'>back</p><p class='porte'>left</p><p class='fenetre'>right</p><p>front</p>
 		<porte class='left'>coco</porte><fenetre class='back'>lolo</fenetre><fenetre class='right'>lolo</fenetre>
+		<table-3d></table-3d>
 	</piece-3d>
--->
 </body></html>
