--- a/piece.html
+++ b/piece.html
@@ -49,4 +49,5 @@ piece-3d {
 		<table-3d></table-3d>
 		<chaise-3d></chaise-3d>
 	</piece-3d>
+<object src='file:///C:/wamp64/www/html/cube.obj'></object>
 </body></html>
