--- a/photo-edit/image ve.html
+++ b/photo-edit/image ve.html
@@ -78,6 +78,9 @@
 		height: 100%;
 	}
 </style></head><body>
+	<article>
+		<h1>éditeur d'image basique utilisable sur le smarphone</h1>
+	</article>
 	<input type='file' accept='image/png, image/jpg, image/bmp' />
 	<section id='modif'>
 		<button onclick='tumble90degree()'>basculer</button>
